# BasicMcpServer

./: .env.example  .gitignore  Dockerfile  README.md  design_decisions.md  docker-compose.yml  mcp_server_implementation_guide.md  mcp_test_log.md  port_usage.md  pyproject.toml  readme_fastmcp.md  setup_jira_mcp_server.sh  test_terminal.txt
docker/: Dockerfile  README.md  docker-compose.yml
docker/scripts/: entrypoint.sh  run.sh
src/: __init__.py  config.py  main.py  server.py
src/tools/: __init__.py
tests/e2e/: README.md  direct_test.py  mcp_client.py  mcp_container_test.py  requirements.txt  running_server_test.py  session_based_client.py
